# various-algorithms

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  Makefile.directory  Makefile.project  README.md  appveyor.yml
algorithms/: CMakeLists.txt
algorithms/bit-manipulation/find-unique/: aim.hpp  implem.cpp  implem.hpp  main.cpp  tests.hpp
algorithms/bit-manipulation/find-unique-2/: aim.hpp  implem.cpp  implem.hpp  main.cpp  tests.hpp
algorithms/bit-manipulation/gray-code/: CMakeLists.txt  aim.hpp  implem.cpp  implem_only_necessary.cpp  main.cpp  tests.hpp
algorithms/bit-manipulation/less-significant-bit/: aim.hpp  implem.cpp  main.cpp  tests.hpp
algorithms/bit-manipulation/most-significant-bit/: CMakeLists.txt  aim.hpp  implem.cpp  main.cpp  tests.hpp
algorithms/bit-manipulation/most-significant-bit-position/: CMakeLists.txt  aim.hpp  implem.cpp  implem_divide_range.cpp  implem_divide_range.hpp  main.cpp  main_constexpr.cpp  main_perfs.cpp  tests.hpp
algorithms/contiguous-data/: CMakeLists.txt
algorithms/contiguous-data/all-unique/: aim.hpp  implem.cpp  implem_nostruct.cpp  main.cpp  tests.hpp
algorithms/contiguous-data/find-substr/: aim.hpp  implem.cpp  implem_dyn_recursive.cpp  implem_multi.cpp  implem_naive.cpp  implem_recursive.cpp  main.cpp
algorithms/contiguous-data/isomorphic-strings/: aim.hpp  implem.cpp  main.cpp  tests.hpp
algorithms/contiguous-data/longest-common-substr/: aim.hpp  implem.cpp  implem_dynamic.cpp  main.cpp
algorithms/contiguous-data/longest-incrpath-matrix/: aim.hpp  implem.cpp  implem_dfs.cpp  main.cpp
algorithms/contiguous-data/longest-no-repeat/: aim.hpp  implem.cpp  main.cpp
algorithms/contiguous-data/longest-substr-2-uniques/: CMakeLists.txt  aim.hpp  implem.cpp  main.cpp  tests.hpp
algorithms/contiguous-data/maximal-rectangle/: aim.hpp  implem.cpp  implem_histogram_based.cpp  main.cpp
algorithms/contiguous-data/minimum-rotated/: aim.hpp  implem.cpp  main.cpp
algorithms/contiguous-data/product-except-self/: CMakeLists.txt  aim.hpp  implem.cpp  implem_using_stl.cpp  main.cpp  main_perfs.cpp  tests.hpp
algorithms/contiguous-data/r-rotate-array/: aim.hpp  implem.cpp  implem_inplace.cpp  main.cpp
algorithms/contiguous-data/rectangle-in-histogram/: aim.hpp  implem.cpp  main.cpp
algorithms/contiguous-data/replace-spaces/: CMakeLists.txt  aim.hpp  algos.txt  implem_inplace.cpp  implem_with_stl.cpp  main.cpp  tests.hpp
algorithms/contiguous-data/reverse-c-string/: aim.hpp  implem.cpp  main.cpp  tests.hpp
algorithms/contiguous-data/reverse-polish-notation/: aim.hpp  implem.cpp  implem.hpp  main.cpp  tests.hpp
algorithms/contiguous-data/reverse-vowels/: aim.hpp  implem.cpp  main.cpp
algorithms/contiguous-data/reverse-words/: aim.hpp  implem.cpp  implem_macro.cpp  main.cpp
algorithms/contiguous-data/split-string/: CMakeLists.txt  aim.hpp  implem_iterative.cpp  implem_iterative_findif.cpp  implem_iterator.cpp  main.cpp
algorithms/contiguous-data/string-to-int/: aim.hpp  implem.cpp  implem.hpp  implem_cpp11.cpp  implem_cpp11.hpp  main.cpp  main_constexpr.cpp  tests.hpp
algorithms/fifo-lifo/sort-stack/: aim.hpp  implem_merge.cpp  implem_merge.hpp  implem_quick.cpp  implem_quick.hpp  implem_selection.cpp  implem_selection.hpp  main.cpp  tests.hpp
algorithms/graph/maze-generator/: aim.hpp  array2d.hpp  implem.cpp  main.cpp  main_draw.cpp  maze.hpp
algorithms/graph/maze-generator-no-odd/: aim.hpp  array2d.hpp  implem.cpp  implem_biased.cpp  implem_from_solution.cpp  main.cpp  main_difficulty.cpp  main_draw.cpp  maze.hpp
algorithms/numbers/closest-triplet/: aim.hpp  implem.cpp  implem_naive.cpp  main.cpp
algorithms/numbers/factorial-sequence/: CMakeLists.txt  aim.hpp  implem_stl_only.cpp  implem_with_generic_sequence.cpp  main.cpp  tests.hpp
algorithms/numbers/fibo-sequence/: aim.hpp  implem_stl_only.cpp  main.cpp  tests.hpp
algorithms/numbers/overflow-addition/: aim.hpp  implem.cpp  main.cpp
algorithms/numbers/roman-numbers/: CMakeLists.txt  aim.hpp  implem.cpp  implem_with_precomputed.cpp  implem_with_precomputed.hpp  main.cpp  main_perfs.cpp  tests.hpp
algorithms/numbers/roman_numbers/: CMakeLists.txt  implem.cpp  implem_with_precomputed.cpp  tests.hpp
algorithms/numbers/triplet-suming-to-zero/: CMakeLists.txt  aim.hpp  implem.cpp  main.cpp  tests.hpp
algorithms/recurse/hanoi-towers/: aim.hpp  algos.txt  hanoi.hpp  hanoi_impl.hpp  ihanoi.hpp  implem_iterative.cpp  implem_iterative_no_stack.cpp  implem_recurse.cpp  main.cpp  tests.hpp
containers/forward_list/: CMakeLists.txt  aim.hpp  implem.cpp  implem.hpp  main.cpp  tests.hpp
cracking-the-coding/: Makefile
cracking-the-coding/1-array-string/: Makefile
cracking-the-coding/1-array-string/1.1-all-unique/: Makefile  algos.txt  main.cpp
cracking-the-coding/3-stack-queue/: Makefile
cracking-the-coding/3-stack-queue/3.6-sort-stack/: Makefile  algos.txt  main.cpp
utility/type_traits/: aim.hpp  implem.hpp  main_asserts.cpp
various-algorithms-java/: pom.xml
various-algorithms-java/src/main/java/: CircularQueueFactory.java  EquivalentInfixExpression.java
various-algorithms-java/src/test/java/: CircularQueueFactoryTest.java  EquivalentInfixExpressionTest.java
websites/codingame-knight/: CMakeLists.txt  aim.hpp  implem.cpp  implem.hpp  ispace.hpp  main.cpp  space.hpp  space_impl.hpp  tests.hpp
websites/topcoder-businesstasks/: aim.hpp  implem.cpp  implem_nodata_rec.cpp  main.cpp
websites/topcoder-capturethemall/: aim.hpp  implem.cpp  main.cpp
websites/topcoder-grafixmask/: aim.hpp  implem.cpp  main.cpp
websites/topcoder-medaltable/: aim.hpp  implem.cpp  main.cpp
websites/topcoder-revolvingdoors/: aim.hpp  implem.cpp  main.cpp
websites/topcoder-smartwordtoy/: aim.hpp  implem.cpp  implem_as_already_seen.cpp  main.cpp
websites/topcoder-tallpeople/: aim.hpp  implem.cpp  main.cpp
websites/topcoder-turntableservice/: aim.hpp  implem.cpp  main.cpp
websites/topcoder-walkinghome/: aim.hpp  implem.cpp  implem_dijkstra.cpp  implem_dijkstra_set.cpp  main.cpp
