file(GLOB TEST_SRC_FILES *.cpp)

message(STATUS "Scanning: ${CMAKE_CURRENT_SOURCE_DIR}")
get_filename_component(EXEC_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
#message(STATUS "Owner name: ${EXEC_NAME}")
string(REPLACE "-" "" TEST_NAME_START ${EXEC_NAME})
string(REPLACE "." "" TEST_NAME_START ${TEST_NAME_START})
string(REPLACE "_" "" TEST_NAME_START ${TEST_NAME_START})

foreach(SRC_NAME ${TEST_SRC_FILES})
  if(NOT ${SRC_NAME} MATCHES "main.cpp")
    #message(STATUS "Found source: ${SRC_NAME}")
    get_filename_component(SRC_NAME_WE ${SRC_NAME} NAME_WE)
    set(TARGET_NAME "${EXEC_NAME}.${SRC_NAME_WE}")
    string(REPLACE "-" "" TEST_NAME_END ${SRC_NAME_WE})
    string(REPLACE "." "" TEST_NAME_END ${TEST_NAME_END})
    string(REPLACE "_" "" TEST_NAME_END ${TEST_NAME_END})
    set(TEST_NAME ${TEST_NAME_START}_${TEST_NAME_END})
    message(STATUS "-- Target name: ${TARGET_NAME} (for test: ${TEST_NAME})")
    add_executable(${TARGET_NAME} ${SRC_NAME} main.cpp)
    target_compile_options(${TARGET_NAME} PRIVATE -DTEST_NAME=${TEST_NAME})
    target_link_libraries(${TARGET_NAME} ${GTEST_BOTH_LIBRARIES} rapidcheck)
    add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
  endif()
endforeach()

