file(GLOB TEST_SRC_FILES implem*.cpp)
file(GLOB MEASURE_SRC_FILES main.cpp main_*.cpp)

message(STATUS "Scanning: ${CMAKE_CURRENT_SOURCE_DIR}")
get_filename_component(EXEC_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
#message(STATUS "Owner name: ${EXEC_NAME}")
string(REPLACE "-" "" TEST_NAME_START ${EXEC_NAME})
string(REPLACE "." "" TEST_NAME_START ${TEST_NAME_START})
string(REPLACE "_" "" TEST_NAME_START ${TEST_NAME_START})

foreach(MEASURE_NAME ${MEASURE_SRC_FILES})
  #message(STATUS "Found measure: ${MEASURE_NAME}")
  get_filename_component(MEASURE_NAME_WE ${MEASURE_NAME} NAME_WE)
  get_filename_component(MEASURE_RELNAME ${MEASURE_NAME} NAME)
  if (${MEASURE_RELNAME} MATCHES "main.cpp")
    set(MEASURE_PREFIX "")
    set(MEASURE_OUTPUTDIR "test")
  else()
    string(REPLACE "main_" "" MEASURE_PREFIX ${MEASURE_NAME_WE})
    string(REPLACE "." "" MEASURE_PREFIX ${MEASURE_PREFIX})
    string(REPLACE "." "" MEASURE_PREFIX ${MEASURE_PREFIX})
    string(REPLACE "_" "" MEASURE_PREFIX ${MEASURE_PREFIX})
    set(MEASURE_OUTPUTDIR ${MEASURE_PREFIX})
    set(MEASURE_PREFIX ${MEASURE_PREFIX}.)
  endif()
  
  foreach(SRC_NAME ${TEST_SRC_FILES})
    #message(STATUS "Found source: ${SRC_NAME}")
    get_filename_component(SRC_NAME_WE ${SRC_NAME} NAME_WE)
    set(TARGET_NAME "${MEASURE_PREFIX}${EXEC_NAME}.${SRC_NAME_WE}")
    string(REPLACE "-" "" TEST_NAME_END ${SRC_NAME_WE})
    string(REPLACE "." "" TEST_NAME_END ${TEST_NAME_END})
    string(REPLACE "_" "" TEST_NAME_END ${TEST_NAME_END})
    set(CODE_TEST_NAME ${TEST_NAME_START}_${TEST_NAME_END})
    set(TEST_NAME ${MEASURE_PREFIX}${CODE_TEST_NAME})
    message(STATUS "-- Target name: ${TARGET_NAME} (for test: ${TEST_NAME})")
    add_executable(${TARGET_NAME} ${SRC_NAME} ${MEASURE_NAME})
    if (MSVC)
      target_compile_options(${TARGET_NAME} PRIVATE /DTEST_NAME=${CODE_TEST_NAME})
    else()
      target_compile_options(${TARGET_NAME} PRIVATE -DTEST_NAME=${CODE_TEST_NAME})
    endif()
    target_link_libraries(${TARGET_NAME} ${GTEST_BOTH_LIBRARIES} rapidcheck)
    set_target_properties(${TARGET_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${MEASURE_OUTPUTDIR})
    if (${MEASURE_OUTPUTDIR} MATCHES "test")
      add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
    endif()
  endforeach()
endforeach()

